--- a/index.html
+++ b/index.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <meta name="viewport" content="width=device-width", initial-scale="1.0">
+
         <title>Search</title>
     </head>
     <body>
-        <form action="https://www.google.com/search">
-            <input type="text" name="q">
-            <input type="submit" value="Google Search">
-        </form>
+        # Top row containing the link to image and advanced search
+        <div>
+
+        </div>
+        # Main search container with two rows inside
+        <div>
+            # Search bar
+            <div>
+                <form action="https://www.google.com/search">
+                    <input type="text" name="q">
+                    <input type="submit" value="Google Search">
+                </form>
+            </div>
+            # Search buttons
+            <div>
+
+            </div>
+        </div>
     </body>
 </html>
