Navbar buttons added

--- a/index.html
+++ b/index.html
@@ -2,27 +2,31 @@
 <html lang="en">
     <head>
         <meta name="viewport" content="width=device-width", initial-scale="1.0">
+        <link rel="stylesheet" href="variables.css">
 
         <title>Search</title>
     </head>
     <body>
         # Top row containing the link to image and advanced search
-        <div>
-
+        <div class="navbar">
+            <a>
+                <button>Image Search</button>
+            </a>
+            <a>
+                <button>Advanced Search</button>
+            </a>
         </div>
-        # Main search container with two rows inside
-        <div>
-            # Search bar
-            <div>
-                <form action="https://www.google.com/search">
-                    <input type="text" name="q">
-                    <input type="submit" value="Google Search">
-                </form>
-            </div>
-            # Search buttons
-            <div>
+        # Search bar
+        <div class="search-bar">
+            <form action="https://www.google.com/search">
+                <input type="text" name="q">
+                <input type="submit" value="Google Search">
+            </form>
+        </div>
+        # Search buttons
+        <div class="search-buttons">
 
-            </div>
+
         </div>
     </body>
 </html>
