--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>Search</title>
     </head>
     <body>
-        # Top row containing the link to image and advanced search
+        <!-- Top row containing the link to image and advanced search -->
         <div class="navbar">
             <a>
                 <button>Image Search</button>
@@ -16,14 +16,14 @@
                 <button>Advanced Search</button>
             </a>
         </div>
-        # Search bar
+        <!-- Search bar -->
         <div class="search-bar">
             <form action="https://www.google.com/search">
                 <input type="text" name="q">
                 <input type="submit" value="Google Search">
             </form>
         </div>
-        # Search buttons
+        <!-- Search buttons -->
         <div class="search-buttons">
 
 
