Button links working

--- a/index.html
+++ b/index.html
@@ -9,12 +9,16 @@
     <body>
         <!-- Top row containing the link to image and advanced search -->
         <div class="navbar">
-            <a>
-                <button>Image Search</button>
-            </a>
-            <a>
-                <button>Advanced Search</button>
-            </a>
+            <li>
+                <a href="image_search.html">
+                    <button>Image Search</button>
+                </a>
+            </li>
+            <li>
+                <a href="advanced_search.html">
+                    <button>Advanced Search</button>
+                </a>
+            </li>
         </div>
         <!-- Search bar -->
         <div class="search-bar">
