--- a/index.html
+++ b/index.html
@@ -9,13 +9,23 @@
     <body>
         <!-- Top row containing the link to image and advanced search -->
         <div class="navbar">
-            <a href="image_search.html">
-                <button>Image Search</button>
-            </a>
+            <div>
 
-            <a href="advanced_search.html">
-                <button>Advanced Search</button>
-            </a>
+            </div>
+            <div>
+                <uL>
+                    <li>
+                        <a href="image_search.html">
+                            <button>Image Search</button>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="advanced_search.html">
+                            <button>Advanced Search</button>
+                        </a>
+                    </li>
+                </uL>
+            </div>
         </div>
         <!-- Search bar -->
         <div class="search-bar">
