--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
     <head>
         <meta name="viewport" content="width=device-width", initial-scale="1.0">
-        <link rel="stylesheet" href="variables.css">
+        <meta http-equiv='cache-control' content='no-cache'> 
+        <meta http-equiv='expires' content='0'> 
+        <meta http-equiv='pragma' content='no-cache'>
+        <link rel="stylesheet" href="google.css">
+        
 
         <title>Search</title>
     </head>
@@ -10,16 +14,8 @@
         <!-- Top row containing the link to image and advanced search -->
         <div class="navbar">
             <uL>
-                <li>
-                    <a href="image_search.html">
-                        <button>Image Search</button>
-                    </a>
-                </li>
-                <li>
-                    <a href="advanced_search.html">
-                        <button>Advanced Search</button>
-                    </a>
-                </li>
+                <li><a href="image_search.html"><button>Image Search</button></a></li>
+                <li><a href="advanced_search.html"><button>Advanced Search</button></a></li>
             </uL>
         </div>
         <!-- Search bar -->
