--- a/advanced_search.html
+++ b/advanced_search.html
@@ -2,6 +2,10 @@
 <html lang="en">
     <head>
         <meta name="viewport" content="width=device-width", initial-scale="1.0">
+        <meta http-equiv='cache-control' content='no-cache'> 
+        <meta http-equiv='expires' content='0'> 
+        <meta http-equiv='pragma' content='no-cache'>
+
         <link rel="stylesheet" href="variables.css">
 
         <title>Advanced Search</title>
