--- a/advanced_search.html
+++ b/advanced_search.html
@@ -6,7 +6,7 @@
         <meta http-equiv='expires' content='0'> 
         <meta http-equiv='pragma' content='no-cache'>
 
-        <link rel="stylesheet" href="variables.css">
+        <link rel="stylesheet" href="google.css">
 
         <title>Advanced Search</title>
     </head>
