--- a/advanced_search.html
+++ b/advanced_search.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         <!-- Top row containing the link to image and advanced search -->
-        <div class="navbar">
+        <div class="navbar-main">
             <div>
                 <uL>
                     <li>
