--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         <!-- Top row containing the link to image and advanced search -->
-        <div class="navbar">
+        <div class="navbar-main">
             <uL>
                 <li><a href="image_search.html"><button>Image Search</button></a></li>
                 <li><a href="advanced_search.html"><button>Advanced Search</button></a></li>
