--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <!-- Top row containing the link to image and advanced search -->
         <div class="navbar-main">
             <uL>
-                <li><a href="image_search.html"><button>Image Search</button></a></li>
-                <li><a href="advanced_search.html"><button>Advanced Search</button></a></li>
+                <li><a href="image_search.html">Image Search</a></li>
+                <li><a href="advanced_search.html">Advanced Search</a></li>
             </uL>
         </div>
         <!-- Search bar -->
