--- a/advanced_search.html
+++ b/advanced_search.html
@@ -16,9 +16,7 @@
             <div>
                 <uL>
                     <li>
-                        <a href="index.html">
-                            <button>Search</button>
-                        </a>
+                        <a href="index.html">Search</a>
                     </li>
                 </uL>
             </div>
