--- a/image_search.html
+++ b/image_search.html
@@ -15,9 +15,7 @@
             <div>
                 <uL>
                     <li>
-                        <a href="index.html">
-                            <button>Search</button>
-                        </a>
+                        <a href="index.html">Search</a>
                     </li>
                 </uL>
             </div>
