class moved from div to ul

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     </head>
     <body>
         <!-- Top row containing the link to image and advanced search -->
-        <div class="navbar-main">
-            <ul>
+        <div>
+            <ul class="navbar-main">
                 <li><a href="image_search.html">Image Search</a></li>
                 <li><a href="advanced_search.html">Advanced Search</a></li>
             </ul>
