deletions to test

--- a/image_search.html
+++ b/image_search.html
@@ -12,19 +12,6 @@
     </head>
     <body>
         <!-- Top row containing the link to image and advanced search -->
-        <div class="navbar-main">
-            <ul>
-                <li>
-                    <a href="index.html">Search</a>
-                </li>
-            </ul>
-        </div>
-        <!-- Search bar -->
-        <div class="search-bar">
-            <form action="https://www.google.com/search">
-                <input type="text" name="q">
-                <input type="submit" value="Google Search">
-            </form>
-        </div>
+        images
     </body>
 </html>
