classes update in html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta http-equiv='cache-control' content='no-cache'> 
         <meta http-equiv='expires' content='0'> 
         <meta http-equiv='pragma' content='no-cache'>
+
         <link rel="stylesheet" href="google.css">
         
 
@@ -14,8 +15,8 @@
         <!-- Top row containing the link to image and advanced search -->
         <div>
             <ul class="navbar-main">
-                <li><a href="image_search.html">Image Search</a></li>
-                <li><a href="advanced_search.html">Advanced Search</a></li>
+                <li class="navbar-link"><a href="image_search.html">Image Search</a></li>
+                <li class="navbar-link"><a href="advanced_search.html">Advanced Search</a></li>
             </ul>
         </div>
         <!-- Search bar -->
