--- a/index.html
+++ b/index.html
@@ -19,13 +19,21 @@
                 <li class="navbar-link"><a href="advanced_search.html">Advanced Search</a></li>
             </ul>
         </div>
+
         <!-- Search bar -->
-        <div class="search-bar">
+        <div class="search-bar-container">
             <form action="https://www.google.com/search">
-                <input type="text" name="q">
-                <input type="submit" value="Google Search">
+
+                    <input class="search-bar-bar" type="text" name="q">
+
+                <div class="search-bar-button-container">
+                    <input class="search-bar-button" type="submit" value="Google Search">
+                    <input class="search-bar-button" type="submit" value="I'm Feeling Lucky">
+                </div>
+                <div>
+                    
+                </div>
             </form>
         </div>
-
     </body>
 </html>
