--- a/image_search.html
+++ b/image_search.html
@@ -12,6 +12,30 @@
     </head>
     <body>
         <!-- Top row containing the link to image and advanced search -->
-        images
+        <div>
+            <ul class="navbar-main">
+                <li class="navbar-link"><a href="index.html" style="text-decoration: none;">Google Search</a></li>
+            </ul>
+        </div>
+        <a href="index.html">
+            <div class="main-logo">
+                <img src="google_images.png" alt="Google Images">
+            </div>
+        </a>
+        <!-- Search bar -->
+        <div class="search-bar-container">
+            <form action="https://images.google.com/search">
+
+                <input type="hidden" name="tbm" value="isch">
+                <input class="search-bar-bar" type="text" name="q">
+
+                <div class="search-bar-button-container">
+                    <input class="search-bar-button" type="submit" value="Google Image Search">
+                </div>
+                <div>
+                    
+                </div>
+            </form>
+        </div>
     </body>
 </html>
