--- a/index.html
+++ b/index.html
@@ -15,20 +15,24 @@
         <!-- Top row containing the link to image and advanced search -->
         <div>
             <ul class="navbar-main">
-                <li class="navbar-link"><a href="image_search.html">Image Search</a></li>
-                <li class="navbar-link"><a href="advanced_search.html">Advanced Search</a></li>
+                <li class="navbar-link"><a href="image_search.html" style="text-decoration: none;">Image Search</a></li>
+                <li class="navbar-link"><a href="advanced_search.html" style="text-decoration: none;">Advanced Search</a></li>
             </ul>
+        </div>
+        <!-- Google Image -->
+        <div class="main-logo">
+            <img src="Google_2015_logo.png" alt="Googles">
         </div>
 
         <!-- Search bar -->
         <div class="search-bar-container">
             <form action="https://www.google.com/search">
 
-                    <input class="search-bar-bar" type="text" name="q">
+                <input class="search-bar-bar" type="text" name="q">
 
                 <div class="search-bar-button-container">
                     <input class="search-bar-button" type="submit" value="Google Search">
-                    <input class="search-bar-button" type="submit" value="I'm Feeling Lucky">
+                    <input class="search-bar-button" name="btnI" type="submit" value="I'm Feeling Lucky">
                 </div>
                 <div>
                     
